@@ -3,6 +3,8 @@ llvm-toolchain-7 (1:7.0.1~+rc3-2) UNRELEASED; urgency=medium
   * Fix llvm-config by stripping unnecessary flags
     See also https://bugs.llvm.org/show_bug.cgi?id=8220
     (Closes: #697755, #914838)
+  * Try to workaround the debug issues by adding -fno-addrsig to the *FLAGS
+    One more time, thanks to Rebecca Palmer (Closes: #913946)
   * Improved the debian/patches/series presentation by creating categories
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 10 Dec 2018 03:49:59 -0500
